<resources>
    <string name="app_name">Inventory App</string>

    <string name="detail_title_new">Add new Product</string>
    <string name="detail_title_existing">View Existing Product</string>

    <string name="empty_list_title">You should add some inventory</string>
    <string name="empty_list_summary">Press the plus button to add your first product</string>

    <string name="quantity_text">%1$s available</string>
    <string name="price_text">$%1$s</string>

    <string name="category_name">Product Name</string>
    <string name="hint_product_name">Amazing new product</string>

    <string name="category_quantity">Quantity</string>
    <string name="hint_product_quantity">1</string>
    <string name="unit_quantity"> available</string>

    <string name="category_price">Price per unit</string>
    <string name="hint_product_price">10</string>

    <string name="action_save">Save</string>
    <string name="action_order">Order Product</string>
    <string name="action_delete">Delete</string>

    <string name="title_edit_product">Edit Product</string>
    <string name="title_add_product">Add Product</string>

    <string name="help_fields_missing">Some fields are missing data!</string>

    <string name="toast_product_added">Product Added</string>
    <string name="toast_product_add_error">Couldn\'t add product</string>
    <string name="toast_product_updated">Product Updated</string>
    <string name="toast_product_update_error">Update failed</string>

    <string name="confirm_deletion">Are you sure you want to delete this product?</string>
    <string name="confirm_option_delete">Delete</string>
    <string name="confirm_option_keep">Don\'t Delete</string>

    <string name="email_subject">Request to re-order product</string>
    <string name="email_body">
        Hi, I\'d like to place an order for %1$s as soon as possible. Thanks.
    </string>

</resources>
